@@ -1,5 +1,10 @@
 2005-02-21  Damien Sandras  <dsandras@gnome.org>
 
+	* src/prefs_window.cpp: Correctly remove deleted accounts
+	from the GUI.
+
+2005-02-21  Damien Sandras  <dsandras@gnome.org>
+
 	* gnomemeeting.schemas.in.in: Removed Gatekeeper key.
 
 	* src/Makefile.am: Added back LID building.
